# audiometa

./: .bumpversion.cfg  .cursorrules  .flake8  .gitignore  .mdformat.toml  .pre-commit-config.yaml  .prettierrc.json  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT.md  PR_DESCRIPTION.md  PR_DESCRIPTION_CURSOR_RULES.md  PR_DESCRIPTION_LABELER.md  PR_DESCRIPTION_WORKTREE.md  README.md  SUPPORT.md  TODO.md  package.json  pyproject.toml  pytest.ini  requirements.txt  system-dependencies-lint.toml  system-dependencies-prod.toml  system-dependencies-test-only.toml  system-dependencies-verification.toml  system-dependencies.toml  test_docformatter.py  test_long_comment.py
.cursor/: cli.json
.cursor/rules/: changelog.mdc  code-style.mdc  commit-messages.mdc  dependency-pinning.mdc  file-organization.mdc  git-workflow.mdc  git.mdc  github-bug-reports.mdc  github-feature-requests.mdc  github-issues.mdc  markdown-formatting.mdc  pr-descriptions.mdc  pr-naming.mdc  pre-commit.mdc  python-style.mdc  ruff-ignored-rules.mdc  ruff-style-best-practices.mdc  testing-parametrize.mdc  testing.mdc  virtual-environment.mdc
.github/: SECURITY.md  auto-assign-config.yml  labeler.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: auto-approve.yml  auto-assign.yml  auto-label.yml  ci.yml  publish.yml  stale.yml  welcome.yml
.pre-commit-hooks/: check-shell-trailing-blank-lines.sh  check-tool-versions.sh  fix-long-comments.py  fix-shell-trailing-blank-lines.sh  fix-trailing-blank-lines.sh  mypy-wrapper.sh  no-assert.sh  psscriptanalyzer-format-wrapper.sh  psscriptanalyzer-wrapper.sh  tool-wrapper.sh  validate-system-dependencies.py
audiometa/: CONTRIBUTING.md  __init__.py  _audio_file.py  audio_file.py  cli.py  exceptions.py
audiometa/manager/: MetadataManager.py  _MetadataManager.py
audiometa/manager/_rating_supporting/: _Id3v2Manager.py  _RatingSupportingMetadataManager.py  _RiffManager.py  _VorbisManager.py
audiometa/manager/_rating_supporting/id3v2/: _Id3v2Manager.py
audiometa/manager/_rating_supporting/riff/: _RiffManager.py
audiometa/manager/_rating_supporting/vorbis/: _VorbisManager.py
audiometa/manager/id3v1/: Id3v1Manager.py  Id3v1RawMetadata.py  Id3v1RawMetadataKey.py  _Id3v1Manager.py  id3v1_raw_metadata.py
audiometa/manager/rating_supporting/: Id3v2Manager.py  RatingSupportingMetadataManager.py  RiffManager.py  VorbisManager.py  _Id3v2Manager.py  _RatingSupportingMetadataManager.py  _RiffManager.py  _VorbisManager.py
audiometa/test/: README.md
audiometa/test/assets/: album artists=One Two Three_muti tags and slash_vorbis.flac  album artists=One Two Three_muti tags_vorbis.flac  album=koko_vorbis.flac  artists=One Two Three_muti tags and slash_vorbis.flac  artists=One Two Three_muti tags_vorbis.flac  bitrate in kbps_small=723.flac  create_test_files.py  format=md5 not valid and corrupted.flac  metadata=long a_id3v2_small.flac  metadata=long a_vorbis_small.flac  rating_id3v2=0 star.flac  rating_id3v2=1 star.flac  rating_id3v2=1.5 star.flac  rating_id3v2=3 star.flac  rating_id3v2=4.5 star.flac  rating_vorbis=0 star.flac  rating_vorbis=0.5 star.flac  rating_vorbis=1 star.flac  rating_vorbis=1.5 star.flac  rating_vorbis=2 star.flac  rating_vorbis=2.5 star.flac  rating_vorbis=3 star.flac  rating_vorbis=3.5 star.flac  rating_vorbis=4 star.flac  rating_vorbis=4.5 star.flac  rating_vorbis=5 star.flac  rating_vorbis_traktor=1 star.flac  rating_vorbis_traktor=2 star.flac  rating_vorbis_traktor=3 star.flac  rating_vorbis_traktor=4 star.flac  rating_vorbis_traktor=5 star.flac  rating_vorbis_traktor=none.flac
audiometa/test/data/audio_files/: sample.flac
audiometa/test/data/scripts/: README.md
audiometa/test/helpers/: __init__.py  technical_info_inspector.py  temp_file_with_metadata.py
audiometa/test/helpers/common/: audio_file_creator.py  external_tool_runner.py
audiometa/test/helpers/id3v1/: id3v1_header_verifier.py  id3v1_metadata_getter.py  id3v1_metadata_setter.py
audiometa/test/helpers/id3v2/: id3v2_frame_manual_creator.py  id3v2_header_verifier.py  id3v2_metadata_deleter.py  id3v2_metadata_getter.py  id3v2_metadata_setter.py
audiometa/test/helpers/riff/: riff_header_verifier.py  riff_manual_metadata_creator.py  riff_metadata_getter.py  riff_metadata_setter.py
audiometa/test/helpers/scripts/: README.md  set-id3v1-max-metadata.sh  set-id3v2-max-metadata.sh  set-riff-max-metadata.sh  set-vorbis-max-metadata.sh
audiometa/test/tests/: conftest.py  installation_checks.py
audiometa/utils/: UnifiedMetadataKey.py  rating_profiles.py  technical_info_inspector.py  types.py  unified_metadata_key.py
audiometa/utils/os_dependencies_checker/: config.py  macos.py  ubuntu.py  windows.py
docs/: AUDIO_TECHNICAL_INFO_GUIDE.md  COMMITTING.md  DISC_NUMBER.md  ERROR_HANDLING_GUIDE.md  GENRE_HANDLING.md  GIT_WORKTREES.md  LYRICS_SUPPORT.md  METADATA_FIELD_GUIDE.md  METADATA_FORMATS.md  MULTIPLE_VALUES.md  RATING_HANDLING.md  TESTING.md  TRACK_NUMBER.md  WRITING_METADATA.md
scripts/: create-worktree-cursor.sh  create-worktree.sh  cursor-common.sh  editor-common.sh  free-cache-macos.sh  git-push-progressively.sh  install-bwfmetaedit-ubuntu.sh  install-bwfmetaedit-windows.ps1  install-id3v2-linux.sh  install-system-dependencies-macos.sh  install-system-dependencies-ubuntu.sh  install-system-dependencies-windows.ps1  load-system-dependency-versions.py  macos-common.sh  open-worktree-cursor.sh  open-worktree.sh  remove-worktree-branch.sh  remove-worktree-interactive.sh  setup-precommit.sh  setup-system-dependencies.sh  setup-worktree.sh  update-pinned-versions.sh  verify-system-dependency-versions.py
scripts/ci/: install-bwfmetaedit-macos.sh  install-bwfmetaedit-ubuntu.sh  install-bwfmetaedit-windows.ps1  install-ffmpeg-macos.sh  install-flac-macos.sh  install-id3v2-macos.sh  install-mediainfo-macos.sh  install-system-dependencies-macos.sh  install-system-dependencies-ubuntu.sh  install-system-dependencies-windows.ps1  load-system-dependency-versions.py  macos-common.sh
(+346 files in other folders)
