[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "audiometa-python"
version = "0.1.0"
description = "A comprehensive Python library for reading and writing audio metadata across multiple formats"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [
    {name = "Andreas Garcia", email = "garcia.andreas.1991@gmail.com"},
    {name = "AudioMeta Python Contributors"}
]
keywords = ["audio", "metadata", "mp3", "flac", "wav", "id3", "vorbis", "riff"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "mutagen>=1.45.0",
]

[project.scripts]
audiometa = "audiometa.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "isort>=5.0.0",
    "mypy>=1.0.0",
    "flake8>=5.0.0",
    "pre-commit>=3.0.0",
    "autoflake>=2.0.0",
    "docformatter>=1.7.0",
    "soundfile>=0.10.0",
]
yaml = [
    "PyYAML>=6.0",
]

[project.urls]
Homepage = "https://github.com/your-username/audiometa-python"
Repository = "https://github.com/your-username/audiometa-python"
Issues = "https://github.com/your-username/audiometa-python/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["audiometa*"]

[tool.setuptools.package-data]
audiometa = ["py.typed"]

[tool.black]
line-length = 120
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 120

[tool.docformatter]
wrap-summaries = 120
wrap-descriptions = 120

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

# Relaxed rules for test code
[[tool.mypy.overrides]]
module = "audiometa.test.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false
disallow_untyped_decorators = false
disable_error_code = ["var-annotated", "operator", "assignment", "arg-type", "index", "dict-item", "abstract", "attr-defined"]
warn_unused_ignores = false
no_implicit_optional = false
warn_unreachable = false
warn_no_return = false
warn_return_any = false

# Ignore missing imports for pytest (type stubs not available as separate package)
[[tool.mypy.overrides]]
module = "pytest"
ignore_missing_imports = true

# Ignore missing imports for mutagen internal modules (no type stubs available)
[[tool.mypy.overrides]]
module = "mutagen.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["audiometa/test"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --strict-markers --disable-warnings --order-dependencies --order-marker=unit:1 --order-marker=integration:2 --order-marker=e2e:3"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "unit: marks tests as unit tests",
    "integration: marks tests as integration tests",
    "e2e: marks tests as end-to-end tests"
]
